# ocean_frontier_exploration

./: .gitignore  LICENSE  README.md  SETUP_ISAAC_SIM.md  check_topics.sh  occupancy_grid.py
OceanSim/: LICENSE
OceanSim/.github/ISSUE_TEMPLATE/: bug_report.md
OceanSim/config/: extension.toml  register_asset_path.py
OceanSim/demo/: demo_waypoints.txt
OceanSim/docs/: CHANGELOG.md  README.md
OceanSim/docs/subsections/: building_own_digital_twin.md  contribution_guide.md  running_example.md
OceanSim/isaacsim/oceansim/modules/SensorExample_python/: extension.py  global_variables.py  scenario.py  sonar_pointcloud_publisher.py  ui_builder.py
OceanSim/isaacsim/oceansim/modules/colorpicker_python/: extension.py  global_variables.py  scenario.py  ui_builder.py
OceanSim/isaacsim/oceansim/sensors/: BarometerSensor.py  BarometerSensor_ROS.py  DVLSensor_ROS.py  DVLsensor.py  ImagingSonarSensor.py  ImagingSonarSensor_ROS.py  ImuSensor_ROS.py  UW_Camera.py  UW_Camera_Stereo.py  UW_StereoCamera.py  ros2_helpers.py
OceanSim/isaacsim/oceansim/utils/: ImagingSonar_kernels.py  MultivariateNormal.py  MultivariateUniform.py  UWrenderer_utils.py  asset_path.json  assets_utils.py  cmd_vel_subscriber.py  keyboard_cmd.py
bags/kitti_00/: kitti_00_0.db3  metadata.yaml
docker/: README.md  build.sh  container.Dockerfile  entrypoint.sh  run.sh
frontier_detection_3d/config/: params.yaml
frontier_detection_3d/include/frontier_detection_3d/: frontier_detector.hpp
frontier_detection_3d/src/: frontier_detector.cpp
octomap_3d_exploration/: CMakeLists.txt
octomap_3d_exploration/config/: params.yaml
octomap_3d_exploration/src/: octomap_builder.cpp
path_planner_3d/: CMakeLists.txt  README.md  package.xml
path_planner_3d/config/: controller_params.yaml  planner_params.yaml
path_planner_3d/include/path_planner_3d/: path_controller.hpp  path_planner.hpp
path_planner_3d/launch/: full_navigation.launch.py  path_controller.launch.py  path_planner.launch.py  static_tf_test.launch.py
path_planner_3d/src/: path_controller.cpp  path_planner.cpp
sensing/sensor_fusion/: package.xml  setup.py
sensing/sensor_fusion/sensor_fusion/: sensor_fusion.py
ws/frontier_detection_3d/: CMakeLists.txt  README.md  package.xml
ws/frontier_detection_3d/config/: params.yaml
ws/frontier_detection_3d/launch/: frontier_detector.launch.py
ws/frontier_detection_3d/src/: frontier_detector.cpp
ws/msgs/: CMakeLists.txt  package.xml
ws/msgs/msg/: Baro.msg  Dvl.msg
ws/octomap_3d_exploration/: README.md  package.xml
ws/octomap_3d_exploration/config/: params.yaml
ws/octomap_3d_exploration/include/octomap_3d_exploration/: octomap_builder.hpp
ws/octomap_3d_exploration/launch/: octomap_builder.launch.py
ws/octomap_3d_exploration/src/: octomap_builder.cpp
